<?xml version="1.0" encoding="utf-8"?>
<resources>
	
    <string name="app_name">90World校园商城</string>
    <string name="register_school_tip">请选择您的学校</string>
    <string name="password_find">找回密码</string>
    <string name="back">返回</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="import_phonenumber">请输入您的手机号码</string>
    <string name="import_stuid">请输入您的学号</string>
    <string name="import_password">请输入您的密码</string>
    <string name="import_name">请输入昵称</string>
    <string name="import_register_password">请输入您的登录密码</string>
    <string name="import_register_confirm_password">请再次输入您的登录密码</string>
    <string name="read_agree">我已阅读并同意</string>
    <string name="agreement">《90World校园商城注册条例》</string>
    <string name="title_agreement">用户协议</string>

    <string name="remember_me">记住我</string>
    <string name="forgetpassword">忘记密码>></string>
    <string name="name">姓名:</string>
    <string name="nick">昵称:</string>
    <string name="phone">电话:</string>
    <string name="stuid">学号:</string>
    <string name="school">学校:</string>
    <string name="password">密码:</string>
    <string name="confirm_password">确认:</string>
    
    <string name="confirm_userinfo">正在确认您的信息…</string>
    <string name="yourpassword">您的密码为：</string>
    <string name="please_remember">请牢记！</string>
    
    
    <string name="express">快递</string>
    <string name="orderfood">订餐</string>
    <string name="service">维修</string>
    <string name="characteristic">特色</string>
    <string name="supermaket">超市</string>
    <string name="tuijian">推荐</string>
    <string name="collect">收藏</string>
    <string name="oldprice">价格：</string>
    <string name="newprice">现价：</string>
    <string name="add_to_shoppingcar">加入购物车</string>
    
    <string name="shoppingcar">购物车</string>
    <string name="delete">删除</string>
    <string name="pay_shoppingcar">去结算</string>
    <string name="write_order">填写订单</string>
    <string name="cart_item_hint">购物车还是空的，快去选购吧～！</string>
    <string name="goshopping">去逛逛</string>
    <string name="search_autoComplete">商品搜索</string>
    <string name="search_as_sort">按类别</string>
    <string name="search">搜索</string>
    <string name="search_as_restaurant">按餐馆</string>
    <string name="shake">摇一摇</string>
    
    <string name="more">更多</string>
    <string name="userinfo">个人信息</string>
    <string name="address_setting">地址管理</string>
    <string name="address_eidit">编辑地址</string>
    <string name="address_add">新增地址</string>
    <string name="my_order">我的订单</string>
    <string name="my_favorite">我的收藏</string>
    <string name="setting">设置</string>
    <string name="feedback">反馈建议</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="exit">退出</string>
    <string name="auto_load_picture">移动数据获取商品图片</string>
    <string name="clean_cache">清除所有图片缓存</string>
    <string name="getpush">接收推送消息</string>
    <string name="check_version">检查新版本</string>
    <string name="all_order">所有的订单</string>
    <string name="delivery_order">未处理订单</string>
    <string name="take_delivery_order">正处理订单</string>
    <string name="completed_order">已完成订单</string>
    <string name="userinfo_change">修改</string>
    <string name="password_change">修改密码</string>
    <string name="complete">完成</string>
    <string name="newpassword">新密码:</string>
    <string name="userinfo_change_page">个人信息修改</string>
    <string name="import_oldpassword">请输入原密码</string>
    <string name="import_newpassword">请输入新密码</string>
    <string name="import_confirm_newpassword">请再输入新密码</string>
    <string name="password_change_page">密码修改</string>
    
    <string name="searchRadio_goods">搜商品</string>
    <string name="searchRadio_food">搜快餐</string>
    <string name="searchRadio_restaurant">搜饭店</string>
    
   
    <string name="confirm">确认</string>
    <string name="all_select">全选</string>
    <string name="goods_select">商品</string>
    <string name="food_select">菜品</string>
    <string name="it_select">数码</string>
    <string name="goods_number">数量：</string>
    <string name="order_detail">订单详情</string>

    <string name="address_order">地址:</string>
	<string name="order_bumber">订单号：</string>
	<string name="total_value">订单金额：</string>
	<string name="submit_time">下单时间：</string>
	<string name="order_status">订单状态：</string>
	<string name="content_product_all_money">总金额:</string>
	<string name="content_cheap_money">优惠金额:</string>
	<string name="content_should_pay_money">应付金额:</string>
	<string name="comment">备注:</string>
	<string name="cancel_delivery_order">取消的订单</string>
	<string name="order_produce">提交订单</string>
	<string name="detail_of_receiver">收货人信息</string>
	<string name="receiver">收货人：</string>
	<string name="receiver_phoneNumber">手机：</string>
	<string name="receiver_address">地址：</string>
	<string name="submit_order">提交订单</string>
	<string name="search_nothing">额~什么也没搜到啊&#8230;</string>
	
	<string name="dialog_update_title">更新</string>
	<string name="dialog_update_msg">发现新版本：</string>
	<string name="dialog_update_msg2">,是否立即更新</string>
	<string name="dialog_update_btnupdate">更新</string>
	<string name="dialog_update_btnnext">下次再说</string>
	<string name="dialog_downloading_msg">正在下载更新,请稍后&#8230;</string>
	<string name="dialog_alert_title">警告</string>
	<string name="dialog_downfailed_btndown">重新下载</string>
	<string name="dialog_downfailed_btnnext">以后再说</string>
	<string name="dialog_error_title">错误</string>
	<string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>

</resources>