<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:background="#eee"
    android:id="@+id/rea_lay_login">
    <RelativeLayout 
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#666666">
        <RelativeLayout
		    android:id="@+id/ly_back" 
		    android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:paddingRight="5dp"
        	android:background="@drawable/btn_back">
        <ImageView
		    android:id="@+id/iv_back"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:background="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        </RelativeLayout>
        
        <Button 
            android:id="@+id/btn_register"
			    android:layout_width="67dp" 
        		android:layout_height="wrap_content"
        		android:layout_alignParentRight="true" 
        		android:layout_centerVertical="true"
        		android:layout_marginRight="5dp"
        		android:text="@string/register"
        		android:textColor="#fff"
        		android:textSize="14sp"
				android:background="@drawable/title_btn_right"
			    />
    </RelativeLayout>
	<EditText 
	    android:id="@+id/et_phonenumber_login"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_top_layout"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:singleLine="true"
	    android:inputType="phone"
	    android:background="@drawable/login_editbox"
	    android:hint="@string/import_phonenumber"/>
	<EditText 
	    android:id="@+id/et_password_login"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/et_phonenumber_login"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@drawable/login_editbox"
	    android:inputType="textPassword"
	    android:singleLine="true"
	    android:hint="@string/import_password"/>
	<RelativeLayout 
	    android:id="@+id/layout_keeppassword"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center_vertical"
	    android:layout_below="@+id/et_password_login"
	    >
        <CheckBox
	        android:id="@+id/cb_keepuserinfo_login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_centerVertical="true"
	        android:layout_marginLeft="18dp"
	        android:text="@string/remember_me" 
	        android:textColor="@android:color/black"
	        android:button="@drawable/shoppingcar_check"/>
	    <Button
	        android:id="@+id/btn_turntogettingpassword" 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_marginRight="20dp"
	        android:layout_centerVertical="true"
	        android:text="@string/forgetpassword"
	        android:textSize="16sp"
	        android:textColor="#00f"
	        android:background="#0000"
	        />

	    
	     
	</RelativeLayout>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:layout_below="@+id/layout_keeppassword"
	    android:gravity="center"
	    >
	    <Button
	        android:id="@+id/btn_login"
	        android:layout_width="180dp"
	        android:layout_height="40dp"
            android:gravity="center"
	        android:text="@string/login"
	        android:background="@drawable/btn_green"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        />
	     
	</RelativeLayout>
	
</RelativeLayout>