<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" 
    android:gravity="center_horizontal">
    <RelativeLayout 
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#666666">
        <RelativeLayout
		    android:id="@+id/ly_back" 
		    android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:paddingRight="5dp"
        	android:background="@drawable/btn_back">
            
            
        <ImageView
		    android:id="@+id/iv_back"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:background="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/password_find"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />
        </RelativeLayout>
        
    </RelativeLayout>
	<EditText 
	    android:id="@+id/et_number_find"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/login_top_layout"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:singleLine="true"
	    android:background="@drawable/login_editbox"
	    android:hint="@string/import_phonenumber"/>
	<EditText 
	    android:id="@+id/et_name_find"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/et_number_find"
	    android:textColor="#000"
	    android:textSize="15sp"
	    android:layout_marginTop="25dp"
	    android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:background="@drawable/login_editbox"
	    android:inputType="textPassword"
	    android:singleLine="true"
	    android:hint="@string/import_stuid"/>

	<RelativeLayout
	    android:id="@+id/layout_comfirm_password_find"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/et_name_find"
	    android:layout_marginTop="20dp"
	    android:gravity="center" >

	    <Button
	        android:id="@+id/btn_confirm_password_find"
	        android:layout_width="180dp"
	        android:layout_height="40dp"
            android:gravity="center"
	        android:text="打电话"
	        android:background="@drawable/btn_green"
	        android:textColor="#ffffff"
	        android:textSize="18sp"
	        />
	     
	</RelativeLayout>
	<TextView
	        android:id="@+id/tv_confirm_userinfo_password_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_comfirm_password_find"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:text="@string/confirm_userinfo"
            android:visibility="gone"
           />
	<RelativeLayout 
	    android:id="@+id/layout_passwordshow_password_find"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:layout_below="@+id/tv_confirm_userinfo_password_find"
	    android:layout_marginTop="10dp"
	    android:gravity="center"
	    >
	<TextView
	        android:id="@+id/tv_yourpassword_password_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_centerVertical="true"
            android:textColor="@android:color/black"
            android:text="@string/yourpassword"
            android:visibility="gone"
           />
	<TextView
	        android:id="@+id/tv_passwordshow_password_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/tv_yourpassword_password_find"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:visibility="visible"
           />
	</RelativeLayout>
	<TextView
	        android:id="@+id/tv_please_remember_password_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_passwordshow_password_find"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/please_remember"
            android:visibility="gone"
           />
</RelativeLayout>