<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >
	<!-- <RelativeLayout 
        android:id="@+id/search_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar">

         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/search"
           />
        
    </RelativeLayout> -->
    <FrameLayout
        android:id="@+id/layout_header_search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:focusable="true"
        android:background="#eeeeee"
         >

            <EditText
                android:id="@+id/actv_autoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:background="#ffffff"
                android:gravity="center_vertical"
                android:hint="@string/search_autoComplete"
                android:padding="8dp"
                android:singleLine="true"
                android:textColor="#ff000000"
                android:textSize="16.0sp" />

            <ImageView
                android:id="@+id/actv_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="right|center"
                android:layout_marginRight="15dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/search_button_delete" />
        
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_search_condition"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_header_search"
       	android:background="#eeeeee"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp" >

        <Button
            android:id="@+id/rb_searchRadio_goods"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:text="@string/searchRadio_goods"
            android:textSize="20.0sp"
            android:textColor="#ffffff" >

        </Button>

        <Button
            android:id="@+id/btn_search_food"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:text="@string/searchRadio_food"
            android:textSize="20.0sp"
            android:textColor="#ffffff" >

        </Button>

        <Button
            android:id="@+id/btn_search_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_green"
            android:text="@string/searchRadio_restaurant"
            android:textSize="20.0sp"
            android:textColor="#ffffff" >

        </Button>
    </LinearLayout>
	<FrameLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@+id/layout_search_condition">
        
	    <ListView
	        android:id="@+id/lv_search"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_margin="1dp"
	        android:cacheColorHint="#00000000"
	        android:scrollbarStyle="insideOverlay"
	        android:divider="@null"
	         >

            <!-- android:fadingEdgeLength="30dp" -->
	    </ListView>

	    <RelativeLayout
	        android:id="@+id/no_search_item"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:layout_marginTop="10dp"
	        android:visibility="gone" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerHorizontal="true"
	            android:text="@string/search_nothing"
	            android:textColor="#000000" 
	            android:textSize="20sp"/>
    		</RelativeLayout>
	    
	    <ProgressBar
         android:id="@+id/pb_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|center"
         android:visibility="gone" />

	    

	</FrameLayout>
</RelativeLayout>