<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/password_change_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="#666666" >
		<RelativeLayout
		    android:id="@+id/ly_back" 
		    android:layout_width="wrap_content"
        	android:layout_height="fill_parent"
        	android:paddingRight="5dp"
        	android:background="@drawable/btn_back">
        <ImageView
		    android:id="@+id/iv_back"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_centerVertical="true"
		    android:layout_marginLeft="5dp"
		    android:layout_marginRight="5dp"
		    android:background="@drawable/back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_back"
            android:text="@string/userinfo"
            android:textColor="#ffffff"
            android:textSize="20sp" />
		</RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay"
        android:layout_below="@+id/password_change_top_layout" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/preference_first_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/name"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_username_userinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/phone"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_phone_userinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/preference_last_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/school"
                    android:textColor="#000"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_school_userinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:textColor="#000"
                    android:textSize="17sp" />
            </RelativeLayout>

		<Button
		    android:id="@+id/btn_changepwd_userinfo"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="12dp"
		    android:layout_marginRight="12dp"
		    android:layout_marginTop="10dp"
		    android:background="@drawable/btn_green"
		    android:clickable="false"
		    android:focusable="false"
		    android:focusableInTouchMode="false"
		    android:text="@string/password_change"
		    android:textColor="#ffffff"
		    android:textSize="20sp"
		    android:paddingTop="10dp"
		    android:paddingBottom="10dp" />
            
        </LinearLayout>
        
    </ScrollView>

</RelativeLayout>